client/vite-project/src/components/user-profile/UserProfile.module.scss
.page__wrapper {
    display: grid;
    max-width: 1000px;
    margin: 0 auto;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 15rem 10rem 10rem 1fr;
}

.profile__page__main__text__container {
    grid-row: 1 / 2;
    grid-column: 1 / 3;
    max-width: 90%;
    margin: 0 auto;

    &__heading {
        text-align: center;
        font-size: 4rem;
        font-weight: 400;

        &::after {
            content: '.';
            color: red;
            font-weight: bold;
        }

        &::first-letter {
            font-size: 5rem;
            font-weight: bold;
        }
    }

    &__subheading {
        font-size: 1.2rem;
        font-weight: 300;
        text-align: center;
        color: rgb(45, 45, 45);
    }
}

// .profile__page__welcome__message__container {
//     grid-row: 1 / 2;
//     grid-column: 1 / 3;
//     align-self: start;
//     justify-self: start;
//     border-radius: .5rem;
//     padding: 1rem 2rem;
// }

// .profile__page__welcome__message {
//     font-size: .8rem;
//     font-weight: 400;
//     margin: 0;
//     display: inline-block;

//     &__email {
//         font-size: .8rem;
//         font-weight: 400;
//         padding-left: .4rem;

//         &::after {
//             content: '.';
//             color: red;
//             font-weight: bold;
//         }
//     }
// }

.profile__page__update__password__container {
    grid-row: 2 / 3;
    grid-column: 2 / 3;
    justify-self: center;
    align-self: start;
    display: flex;
    flex-direction: column;
    align-items: end;
    justify-content: end;
}

.quote__card__container {
    grid-column: 1 / 3;
    grid-row: 4/5;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1rem;
    height: 600px;
    overflow-y: scroll;
    max-width: 80%;
    margin: 0 auto;

    padding: 3rem 0;
}

.profile__page__quote__card__container__heading {
    grid-row: 3 / 4;
    grid-column: 1 / 3;
    font-size: 2.5rem;
    font-weight: 100;
    text-align: center;
    margin: 0;
}

.quote__card__wrapper {
    width: 200px;
    max-height: 170px;
    padding: .75rem 1.5rem;
    border-radius: .1rem;
    background-color: rgb(22, 22, 22);
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    &__quote__author {
        font-size: .65rem;
        color: rgb(228, 228, 228);
        text-align: end;
    }

    &__quote__text {
        font-size: .78rem;
        line-height: 1.25;
        color: rgb(228, 228, 228);
    }

    &__navigation__button {
        all: unset;
        padding: .3rem .8rem;
        font-weight: 400;
        font-size: .6rem;
        border-radius: .1rem;
        background-color: white;
        color: black;
        transition: background-color .3s;
        cursor: pointer;

        &:hover {
            background-color: rgb(162, 162, 162);
            color: rgb(53, 53, 53);
            transition: background-color .3s;
        }
    }
}

.no__quotes__added__message {
    font-size: 1.8rem;
    font-weight: 200;
    justify-self: center;
    align-self: center;

    &::after {
        content: '.';
        font-weight: bold;
        color: red;
    }
}

.quote__card__author__and__nav__button__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.loader__container {
    align-self: center;
    justify-self: center;
}

// styles for quotes container scrollbar
.quote__card__container::-webkit-scrollbar {
    width: 5px;
}

.quote__card__container::-webkit-scrollbar-thumb {
    background-color: rgb(236, 20, 20);
}

// styles for small screns / mobile devices
@media (max-width: 500px) {

    .page__wrapper {
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 17rem 10rem 1fr;
    }

    // Not perfect at all. Needs better responsive styles - especially for quotes__container element
    .quote__card__container {
        min-height: 300px;
    }

    .profile__page__quote__card__container__heading {
        padding-bottom: 2rem;
    }

    // .profile__page__welcome__message__container {
    //     grid-row: 1 / 2;
    //     grid-column: 1 / 3;
    //     justify-self: center;
    // }

    .profile__page__update__password__container {
        grid-row: 2 / 3;
        grid-column: 1 / 3;
        justify-self: center;
        align-self: start;
    }
}

